92-uncomment.oc.err
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
--(end of buffer or a NUL)
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
--accepting rule at line 41 ("# 1 "92-uncomment.oc"")
--accepting rule at line 43 ("
")
--accepting rule at line 41 ("# 1 "<built-in>"")
--accepting rule at line 43 ("
")
--accepting rule at line 41 ("# 1 "<command-line>"")
--accepting rule at line 43 ("
")
--accepting rule at line 41 ("# 1 "/usr/include/stdc-predef.h" 1 3 4")
--accepting rule at line 43 ("
")
--accepting rule at line 41 ("# 1 "<command-line>" 2")
--accepting rule at line 43 ("
")
--accepting rule at line 41 ("# 1 "92-uncomment.oc"")
--accepting rule at line 43 ("
")
--(end of buffer or a NUL)
--EOF (start condition 0)
/usr/bin/cpp 92-uncomment.oc: status 0x0100, exit 1
